syntax = "proto3";

package rpc;
option go_package="./rpc";

service GossipService {
  rpc PropagateGossip (GossipMessage) returns (GossipResponse);
  rpc PullState (PullRequest) returns (PullResponse);
}

message GossipMessage {
  string source_node = 1;
  map<string, NodeState> state_map = 2;
}

message GossipResponse {
  string ack = 1;
}

message PullRequest {
  string requester_node = 1;
}

message PullResponse {
  map<string, NodeState> state_map = 1;
}

message NodeState {
  string node_id = 1;
  map<string, string> status = 2;
  int64 version = 3;
  string last_update = 4;
}